# HackReporter

./: CREWAI_ARCHITECTURE.md  IMPROVEMENTS_SUMMARY.md  README.md  VIDEO_FEATURES.md  crew.py  optimize_videos.py  pyproject.toml  requirements.txt  server-info.json  server.py  server_backup.py  test_aggregation.py  test_cli.py  test_crew.py  test_typefully.py
config/: agents.yaml  tasks.yaml
src/hackreporter/tools/: gemini_video_tool.py
tools/: __init__.py  captions_tool.py  file_reader_tool.py  gemini_video_tool.py  twitter_tool.py  typefully_tool.py
