[project]
name = "hackreporter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.10.5",
    "python-dotenv>=1.0.0",
    "google-genai>=1.0.0",
    "tweepy>=4.14.0",
    "langchain-google-genai>=2.0.0",
    "agentops>=0.4.17",
    "crewai>=0.141.0",
    "crewai-tools>=0.51.1",
    "exa-py>=1.14.16",
    "weave>=0.51.56",
]
